changed test and updated changelog

--- a/changelog/4904.bugfix.rst
+++ b/changelog/4904.bugfix.rst
@@ -1,3 +1,2 @@
-Fix `~.SRSClient` which silently failed to download the SRS files when the tarball for the previous
-years did not exist. Client now actually searches for the tarballs and srs files on the ftp archive
-before returning as results
+Fixed the `~.SRSClient` which silently failed to download the SRS files when the tarball for the previous years did not exist.
+Client now actually searches for the tarballs and srs files on the ftp archive before returning them as results.
