--- a/docs/whatsnew/2.1.rst
+++ b/docs/whatsnew/2.1.rst
@@ -104,26 +104,26 @@ The key highlights you will want to be aware of are:
 * Previously slicing the result of ``Fido.search()`` (a `~sunpy.net.fido_factory.UnifiedResponse` object) so that it had a length of one returned another `~sunpy.net.fido_factory.UnifiedResponse` object, now it will return a `~sunpy.net.base_client.QueryResponseTable` object, which is a subclass of `astropy.table.Table`.
 
 * All result objects contained within the results of a ``Fido.search()`` are now `~sunpy.net.base_client.QueryResponseTable` objects (or subclasses thereof).
-  These objects are subclasses of `astropy.table.Table` and can therefore be filtered and inspected as tabular objects, and the modified tables can be passed to ``Fido.fetch``.
+  These objects are subclasses of `astropy.table.Table` and can therefore be filtered and inspected as tabular objects, and the modified tables can be passed to ``Fido.fetch()``.
 
 * The keys available to be used when formatting the ``path=`` argument to ``Fido.fetch()`` have changed. This is to standardise them over the results from more clients and make them easier to use.
   You can use the `~.UnifiedResponse.path_format_keys` method to see all the possible keys for a particular search.
 
-* The search results object returned from ``Fido.search`` now correctly counts all results in it's `~sunpy.net.fido_factory.UnifiedResponse.file_num` property.
+* The search results object returned from ``Fido.search`` now correctly counts all results in its `~sunpy.net.fido_factory.UnifiedResponse.file_num` property.
 
-* Results from the `~sunpy.net.dataretriever.NOAAIndicesClient` and the `~sunpy.net.dataretriever.NOAAPredictClient` no longer have ``Start Time`` or ``End Time`` in their results table as the results returned from the client are not dependant upon the time parameter of a search.
+* Results from the `~sunpy.net.dataretriever.NOAAIndicesClient` and the `~sunpy.net.dataretriever.NOAAPredictClient` no longer have ``Start Time`` or ``End Time`` in their results table as the results returned from the client are not dependent upon the time parameter of a search.
 
 .. _whatsnew-2.1-contours:
 
 Finding map contours
 ====================
-The new :meth:`sunpy.map.contour` method can be used to extract contours from a map. It returns contours as a `~astropy.coordinates.SkyCoord`, allowing contours to be easily overplotted on the original or other maps.
+The new :meth:`sunpy.map.GenericMap.contour` method can be used to extract contours from a map. It returns contours as a `~astropy.coordinates.SkyCoord`, allowing contours to be easily overplotted on the original or other maps.
 
 .. _whatsnew-2.1-unitdata:
 
 Map data and units
 ==================
-`~sunpy.map.Map`s now have the ``.unit`` set to the correct `~astropy.units.Unit` if the 'BUNIT' keyword is set in the FITS metadata.
+`~sunpy.map.Map` instances now have the ``.unit`` set to the correct `~astropy.units.Unit` if the 'BUNIT' keyword is set in the FITS metadata.
 
 .. _whatsnew-2.1-synoptic:
 
@@ -191,7 +191,7 @@ Performance improvements
 ========================
 Several functions in `sunpy.map.maputils` have been significantly sped up with improved algorithms.
 
-In addition, `sunpy.map.Map.wcs` is now cached when the map metadata remains unchanged, significantly improving performance in applications which make mutiple requests for the map WCS (e.g. plotting), and reducing the number of repeated warnings thrown when metadata is missing.
+In addition, `sunpy.map.GenericMap.wcs` is now cached when the map metadata remains unchanged, significantly improving performance in applications that make multiple requests for the map WCS (e.g., plotting), and reducing the number of repeated warnings thrown when metadata is missing.
 
 .. _whatsnew-2.1-goes1617:
 
@@ -199,7 +199,7 @@ Support for GOES-16 and GOES-17 X-Ray Sensor (XRS) data
 =======================================================
 We have now included support for the GOES-16 and GOES-17 XRS 1-second data. This data can now be queried and downloaded with `sunpy.net.Fido` and the files read in and analysed as a `sunpy.timeseries.TimeSeries`.
 
-See the following example for how this can be achieved :ref:`sphx_glr_generated_gallery_acquiring_data_goes_xrs_example.py`
+See the following example for how this can be achieved: :ref:`sphx_glr_generated_gallery_acquiring_data_goes_xrs_example.py`
 
 .. _whatsnew-2.1-python:
 
@@ -212,4 +212,4 @@ We have bumped the minimum version of several packages we depend on; these are t
 - scipy 1.2
 - parfive 1.1
 - drms 0.6.1
-- matplotlib 3.1.1
+- matplotlib 2.2.2
