Fix Release and what's new author info

--- a/docs/whatsnew/2.1.rst
+++ b/docs/whatsnew/2.1.rst
@@ -238,7 +238,7 @@ The people who have contributed to the code for this release are:
 -  Kateryna Ivashkiv  *
 -  Koustav Ghosh  *
 -  Kris Akira Stern
--  Kritika  *
+-  Kritika Ranjan  *
 -  Laura Hayes
 -  Lazar Zivadinovic
 -  Nabil Freij
