--- a/changelog/5025.feature.rst
+++ b/changelog/5025.feature.rst
@@ -1,1 +1,2 @@
-Added dynamic z axis option to the animators.
+Added dynamic z axis option to `sunpy.visualization.animator`.
+Specifying ``vmax='auto'`` calculates and updates the files of 
