--- a/changelog/4528.doc.rst
+++ b/changelog/4528.doc.rst
@@ -1,1 +1,1 @@
-Added a gallery example for drawing rectangles on maps.
+Added a gallery example (:ref:`sphx_glr_generated_gallery_plotting_plot_rectangle.py`) for drawing rectangles on maps.
