--- a/docs/whatsnew/3.0.rst
+++ b/docs/whatsnew/3.0.rst
@@ -32,7 +32,11 @@ Increase in required package versions
 =====================================
 We have bumped the minimum version of several packages we depend on; these are the new minimum versions for sunpy 3.0:
 
-- python 3.7
+- python >= 3.7
+- astropy >= 4.1.0
+- numpy >= 1.16.0
+- parfive >= 1.2.0
+- scipy >= 1.3.0
 
 .. _whatsnew-3.0-contributors:
 
