--- a/changelog/5072.doc.rst
+++ b/changelog/5072.doc.rst
@@ -1,1 +1,1 @@
-Added example for 'sunpy.utils.scraper.Scraper' in `sunpy.examples.acquiring_data.scraping_data`.
+Added example for 'sunpy.utils.scraper.Scraper' in `examples.acquiring_data.scraping_data`.
