--- a/docs/whatsnew/3.0.rst
+++ b/docs/whatsnew/3.0.rst
@@ -32,11 +32,23 @@ Increase in required package versions
 =====================================
 We have bumped the minimum version of several packages we depend on; these are the new minimum versions for sunpy 3.0:
 
-- python >= 3.7
+- asdf>=2.6.0
 - astropy >= 4.1.0
+- beautifulsoup4>=4.8.0
+- dask[array]>=2.0.0
+- drms>=0.6.1
+- glymur>=0.8.18,!=0.9.0
+- h5netcdf>=0.8.1
+- matplotlib>=3.1.0
 - numpy >= 1.16.0
+- pandas>=0.24.0
 - parfive >= 1.2.0
+- python-dateutil>=2.8.0
 - scipy >= 1.3.0
+- scipy>=1.3.0
+- sqlalchemy>=1.3.4
+- tqdm>=4.32.1
+- zeep>=3.4.0
 
 .. _whatsnew-3.0-contributors:
 
