--- a/changelog/5125.trivial.rst
+++ b/changelog/5125.trivial.rst
@@ -1,2 +1,2 @@
 Added tests for `sunpy.visualization.animator.mapsequenceanimator` and a test for using
-`plot()` with `sunpy.map.MapSequence`,
+`plot()` with `sunpy.map.MapSequence`.
