--- a/changelog/5125.trivial.rst
+++ b/changelog/5125.trivial.rst
@@ -1,2 +1,1 @@
-Added tests for `sunpy.visualization.animator.mapsequenceanimator` and a test for using
-`plot()` with `sunpy.map.MapSequence`.
+Added tests for `sunpy.visualization.animator.mapsequenceanimator` and :meth:`sunpy.map.MapSequence.plot`.
