--- a/changelog/5177.bugfix.rst
+++ b/changelog/5177.bugfix.rst
@@ -1,1 +1,1 @@
-Added "rsun_obs" to the output of `sunpy.map.make_fitswcs_header` if "rsun" is in the coordinate argument.
+Added a "rsun_obs" keyword to the output of :func:`sunpy.map.make_fitswcs_header` if the coordinate argument has a "rsun" frame attribute.
