--- a/changelog/5244.removal.rst
+++ b/changelog/5244.removal.rst
@@ -1,4 +1,4 @@
-Plotting a `~sunpy.map.GenericMap` on an `~matplotlib.axes.Axes` that is not
+Using `~sunpy.map.GenericMap` plotting methods on an `~matplotlib.axes.Axes` that is not
 a `~astropy.visualization.wcsaxes.WCSAxes` is deprecated. This previously
 raised a warning, but is now formally deprecated, and will raise an error in
 sunpy 3.1.
