--- a/changelog/5249.breaking.rst
+++ b/changelog/5249.breaking.rst
@@ -1,1 +1,1 @@
-Deprecated `sunpy.roi` as it has never seen any real development work.
+Deprecated `sunpy.roi.roi`, as it currently has no obvious use and has never seen any real development work.
