--- a/changelog/5249.breaking.1.rst
+++ b/changelog/5249.breaking.1.rst
@@ -1,1 +1,1 @@
-Deprecated `sunpy.roi.chaincode`, as it currently has no obvious use and has never seen any real development work.
+Deprecated `sunpy.roi.chaincode` and created a replacement at `sunpy.net.helio.chaincode`.
