--- a/changelog/5249.removal.1.rst
+++ b/changelog/5249.removal.1.rst
@@ -3,6 +3,6 @@ Deprecated `sunpy.roi.chaincode.Chaincode` and created a replacement at `sunpy.n
 This replacement has the following changes:
 
 1. Added support for numpy array as an input (it was broken before).
-2. Renamed BoundingBox to boundingbox
-3. Renamed subBoundingBox to sub_boundingbox
-4. Now area and length raise NotImplementedError
+2. Renamed ``BoundingBox`` to ``boundingbox``
+3. Renamed ``subBoundingBox`` to ``sub_boundingbox``
+4. Now area and length raise `NotImplementedError`
